--- a/food-crossroads/src/css/member.css
+++ b/food-crossroads/src/css/member.css
@@ -66,13 +66,21 @@ th {
   text-align: center;
 }
 
+.title_member {
+  font-size: 35px;
+  font-weight: bold;
+  text-align: center;
+  margin-left: 30px;
+}
+
 .title_member_edit {
   font-size: 35px;
   font-weight: bold;
   text-align: center;
+  margin-left: 45px;
 }
 
-.edit_label{
+.edit_label {
   margin-right: 20px;
 }
 
@@ -87,6 +95,7 @@ th {
 .member_div {
   display: flex;
   flex-direction: column;
+
   align-items: center;
   border-radius: 5px;
   padding: 20px 0;
@@ -167,10 +176,10 @@ th {
   background-color: #f04535;
 }
 
-.member_confirm_btn {
+#edit_member .member_confirm_btn {
   border-radius: 5px;
   margin-top: 30px;
-  margin-left: 80px;
+  margin-left: 50px;
   width: 150px;
   height: 40px;
   color: #fff;
@@ -180,10 +189,10 @@ th {
   transition: 0.3s;
 }
 
-.member_confirm_btn :hover {
+#edit_member .member_confirm_btn :hover {
   background-color: #f04535;
 }
-.member_back_btn {
+#edit_member .member_back_btn {
   margin-left: 30px;
   border-radius: 5px;
   margin-top: 30px;
@@ -259,6 +268,11 @@ th {
   transition: 0.3s;
 }
 
+#booking_manage .table_title {
+  position: relative;
+  right: 25px;
+}
+
 .btn_td {
   width: 20%;
 }
@@ -332,7 +346,7 @@ th {
   margin-left: -360px;
   background-color: #8b1309;
   color: #fff;
-  margin-left: -290px;
+  margin-left: -390px;
 }
 
 .order_comment_btn:hover {
@@ -387,6 +401,18 @@ th {
   background-color: #524d4d;
 }
 
+.btn_commentclose {
+  font-size: 18px;
+  background-color: #403c3c;
+  color: #fff;
+  border-radius: 5px;
+  border: none;
+  padding: 10px 20px;
+}
+
+.btn_commentclose:hover {
+  background-color: #524d4d;
+}
 .rank_modal_star {
   margin-top: 20px;
   padding-top: 20px;
