--- a/food-crossroads/src/css/member_register.css
+++ b/food-crossroads/src/css/member_register.css
@@ -52,9 +52,11 @@
 #MemberRegister .register_btn {
   color: white;
   background-color: #8b1309;
+  font-size: 24px;
+
   border: none;
   border-radius: 5px;
-  padding: 20px;
+  padding-bottom: 40px;
   width: 150px;
   margin-top: 30px;
   transition: 0.3s;
