--- a/food-crossroads/src/css/member.css
+++ b/food-crossroads/src/css/member.css
@@ -95,13 +95,17 @@ th {
 .member_div {
   display: flex;
   flex-direction: column;
-
+  border: 1px solid black;
   align-items: center;
   border-radius: 5px;
   padding: 20px 0;
   width: 40%;
 }
 
+.form_text {
+  font-size: 16px;
+  letter-spacing: 10px;
+}
 .editmember_info {
   margin-left: 40px;
 }
