--- a/food-crossroads/src/css/member.css
+++ b/food-crossroads/src/css/member.css
@@ -145,31 +145,35 @@ th {
   justify-content: center;
   text-align: center;
 }
+.btn_div a {
+  text-decoration: none;
+  color: #fff;
+}
 
 .member_editpwd_btn {
   border-radius: 5px;
   margin-top: 30px;
-  padding-top: 10px;
+  padding-top: 6px;
   width: 150px;
   height: 40px;
   color: #fff;
   font-size: 18px;
   border: none;
-  background-color: #8b1309;
+  background-color: #403c3c;
   transition: 0.3s;
 }
 
 .member_editinfo_btn {
   border-radius: 5px;
   margin-top: 30px;
-  padding-top: 10px;
+  padding-top: 6px;
   margin-left: 40px;
   width: 150px;
   height: 40px;
   color: #fff;
   font-size: 18px;
   border: none;
-  background-color: #8b1309;
+  background-color: #403c3c;
   transition: 0.3s;
 }
 
@@ -180,7 +184,7 @@ th {
 #edit_member .member_editinfo_btn {
   border-radius: 5px;
   margin-top: 30px;
-  padding-top: 10px;
+  padding-top: 0px;
   margin-left: 40px;
   width: 150px;
   height: 40px;
@@ -212,8 +216,8 @@ th {
   transition: 0.3s;
 }
 
-#edit_member .member_confirm_btn :hover {
-  background-color: #f04535;
+#edit_member .member_confirm_btn:hover {
+  background-color: red;
 }
 #edit_member .member_back_btn {
   margin-left: 30px;
@@ -228,8 +232,8 @@ th {
   transition: 0.3s;
 }
 
-.member_back_btn:hover {
-  background-color: #4b4747;
+#edit_member .member_back_btn:hover {
+  background-color: #8d8c8c;
 }
 
 .table_container {
