--- a/food-crossroads/src/css/restaurant_booking_history.css
+++ b/food-crossroads/src/css/restaurant_booking_history.css
@@ -6,6 +6,11 @@ aside {
     top: 10%;
 }
 
+.default {
+    width: 230px;
+    background-color: #8B1309;
+}
+
 .panel-default{
     border-bottom: 1px solid white;
     padding: 5px;
@@ -28,10 +33,6 @@ aside {
     margin-left: -5px;
     margin-right: -6px;
     padding: 5px 0 5px 15px;
-}
-
-.little_title:hover {
-    background-color: #8B1309;
 }
 
 .panel .little_title a {
