--- a/food-crossroads/src/css/restaurant_booking_history.css
+++ b/food-crossroads/src/css/restaurant_booking_history.css
@@ -44,24 +44,22 @@
 #restaurant_booking_history .order_table {
     position: absolute;
     top: 140px;
-    left: 16%;
-    width: 80%;
+    left: 20%;
+    width: 75%;
 }
 
 #restaurant_booking_history th {
-    font-size: 16px;
     text-align: center;
-    position: relative;
-    letter-spacing: 5px;
     width: 100px;
+    border-bottom: 1px solid #403C3C;
 }
 
-#restaurant_booking_history .search_bar h3{
+#restaurant_booking_history .search_bar {
+    display: flex;
+    justify-content: center;
+    width: 100%;
     position: relative;
-    left: 20px;
     top: 10px;
-    font-weight: 600;
-    margin-right: 500px;
 }
 
 #restaurant_booking_history .search_bar_div{
@@ -93,12 +91,6 @@
     background-color: #f0b802;
 }
 
-#restaurant_booking_history .search_bar {
-    position: relative;
-    left: 23px;
-    display: flex;
-}
-
 #restaurant_booking_history .search_bar_div{
     border: 1px solid #999999;
     border-radius: 5px;
@@ -123,7 +115,7 @@
 
 #restaurant_booking_history .detail_btn{
     border: 1px solid gray;
-    border-radius: 5px;
+    border-radius: 8px;
 }
 
 #restaurant_booking_history .comment_btn{
@@ -135,6 +127,19 @@
     margin-bottom: 50px;
     text-align: center;
     font-size: 28px;
+}
+
+#restaurant_booking_history tbody .detail_btn,#restaurant_booking_history .modal-footer .detail_btn{
+    border: 2px solid #403C3C;
+    background-color: white;
+    border-radius: 5px;
+    padding: 5px 8px;
+    transition: 0.3s;
+}
+
+#restaurant_booking_history .detail_btn:hover {
+    background-color: #524d4d;    
+    color: #fff;
 }
 
 #restaurant_booking_history .modal-title{
