--- a/food-crossroads/src/css/restaurant_booking_today.css
+++ b/food-crossroads/src/css/restaurant_booking_today.css
@@ -41,10 +41,6 @@
     padding: 5px 0 5px 15px;
 }
 
-#restaurant_today_booking_aside .little_title:hover {
-    background-color:#403C3C;
-}
-
 #restaurant_today_booking_aside .panel .little_title a  {
     text-decoration: none;
     color: white;
@@ -55,6 +51,8 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    position: relative;
+    top: 10px;
 }
 
 #restaurant_today_booking .search_bar h3{
@@ -78,6 +76,10 @@
     padding: 2px 10px;
 }
 
+#restaurant_today_booking th {
+    border-bottom: 1px solid #403C3C;
+}
+
 #restaurant_today_booking .search_bar button:hover {
     background-color: #f0b802;
 }
@@ -93,31 +95,16 @@
 #restaurant_today_booking .container .order_table {
     position: absolute;
     top: 140px;
-    left: 16%;
-    width: 80%;
+    left: 20%;
+    width: 75%;
 }
 
 #restaurant_today_booking label{
     margin-right: 20px;
 }
 
-#restaurant_today_booking .search_bar {
-    position: relative;
-    top: 10px;
-    display: flex;
-}
-
-#restaurant_today_booking thead {
-    position: relative;
-    right: 20px;
-}
-
 #restaurant_today_booking th{
     text-align: center;
-    position: relative;
-    left: 20px;
-    font-size: 16px;
-    letter-spacing: 5px;
     width: 100px;
 }
 
@@ -148,6 +135,7 @@
 
 #restaurant_today_booking tbody .detail_btn,#restaurant_today_booking .modal-footer .detail_btn{
     border: 2px solid #403C3C;
+    background-color: white;
 }
 
 #restaurant_today_booking .detail_btn:hover {
