--- a/food-crossroads/src/css/restaurant_self_pick_up_history.css
+++ b/food-crossroads/src/css/restaurant_self_pick_up_history.css
@@ -47,12 +47,10 @@
 #restaurant_self_pick_up_history .search_bar {
     display: flex;
     justify-content: center;
-    width: 100%;
-}
-
-#restaurant_self_pick_up_history .search_bar h3{
-    font-weight: 600;
-    margin-right: 500px;
+    width: 70%;
+    position: fixed;
+    top: 100px;
+    left: 300px;
 }
 
 #restaurant_self_pick_up_history .search_bar input[type=text]{
@@ -75,19 +73,17 @@
     background-color: #f0b802;
 }
 
-#restaurant_self_pick_up_history .search_bar {
-    position: relative;
-    top: 10px;
-    left: 20px;
+#restaurant_self_pick_up_history th{
+    width: 80px;
+    text-align: center;
+    border-bottom: 1px solid #403C3C;
 }
 
-#restaurant_self_pick_up_history th{
-    font-size: 16px;
+#restaurant_self_pick_up_history .table td{
+    width: 80px;
     text-align: center;
-    position: relative;
-    left: 20px;
-    letter-spacing: 5px;
-    width: 110px;   
+    border-top: 1px solid #403C3C;
+    vertical-align: middle;
 }
 
 #restaurant_self_pick_up_history .search_bar_div{
@@ -98,31 +94,15 @@
     margin-right: 10px;
 }
 
+#restaurant_self_pick_up_history_mobile{
+    display: none;
+}
+
 #restaurant_self_pick_up_history .container .order_table {
     position: absolute;
     top: 140px;
-    left: 16%;
-    width: 80%;
-}
-
-#restaurant_self_pick_up_history label{
-    margin-right: 20px;
-}
-
-#restaurant_self_pick_up_history thead {
-    position: relative;
-    right: 20px;
-}
-
-#restaurant_self_pick_up_history th{
-    text-align: center;
-    position: relative;
-    left: 20px;
-    letter-spacing: 5px;
-}
-
-#restaurant_self_pick_up_history .table td{
-  width: 100px;  
+    left: 20%;
+    width: 75%;
 }
 
 #restaurant_self_pick_up_history tbody .detail_btn,#restaurant_self_pick_up_history tbody .cancel_btn {
@@ -217,40 +197,92 @@
 /* 超大型螢幕 */
 @media screen and (max-width:1200px) {
     #restaurant_self_pick_up_history_aside {
-        background-color: #403C3C;
-        width: 150px;
-        height: 88vh;
-        position: fixed;
-        top: 10%;
+        display: none;
     }
-
-    #restaurant_self_pick_up_history_aside .panel-title {
-        font-size: 20px;
+    #aside_menu_chk:checked + #restaurant_self_pick_up_history_mobile_aside {
+        transform: translateX(0);
+    }
+    #aside_menu_chk:checked + #restaurant_self_pick_up_history_mobile_aside .fa-angle-right {
+        transform: scaleX(-1);
+    }
+    #restaurant_self_pick_up_history_mobile_aside {
+        display: unset;
+        background-color: #403c3c;
+        width: 230px;
+        height: 100vh;
+        position: absolute;
+        float: left;
+        left: 0;
+        position: fixed;
+        transform: translateX(-99%);
+        z-index: 2;
+        transition: 0.6s;
+    }
+    #restaurant_self_pick_up_history_mobile_aside label {
+        position: absolute;
+        background-color: #ccc;
+        border-radius: 0 5px 5px 0;
+        padding: 20px 10px;
+        top: 50%;
+        left: 100%;
+        transition: 0.6s;
+    }
+    
+    #restaurant_self_pick_up_history_mobile_aside .panel-default{
+        border-bottom: 1px solid white;
+        padding: 5px;
+        width: 100%;
+    }
+    
+    #restaurant_self_pick_up_history_mobile_aside .default{
+        background-color: #8B1309;
+    }
+    
+    #restaurant_self_pick_up_history_mobile_aside .panel-title {
         padding-top: 8px;
     }
-
-    #restaurant_self_pick_up_history_aside .panel .little_title a  {
+    
+    #restaurant_self_pick_up_history_mobile_aside .panel-heading .panel-title a {
+        font-weight: 600;
+        color: white;
+        text-decoration: none;
+        transition: 0.3s;
+        width: 100%;
+    }
+    
+    #restaurant_self_pick_up_history_mobile_aside .little_title {
+        margin-left: -5px;
+        margin-right: -6px;
+        padding: 5px 0 5px 15px;
+    }
+    
+    #restaurant_self_pick_up_history_mobile_aside .little_title:hover {
+        background-color: #8B1309;
+    }
+    
+    #restaurant_self_pick_up_history_mobile_aside .panel .little_title a  {
         text-decoration: none;
         color: white;
-        font-size: 13px;
         font-weight: 600;
+    }
+    #restaurant_self_pick_up_history .search_bar {
+        top: 100px;
+        left: 50px;
+        width: 100%;
     }
 
     #restaurant_self_pick_up_history .container .order_table {
-       margin-top: -15px;
+        top: 150px;
+        left: 5%;
+        width: 90%;
     }
 
     #restaurant_self_pick_up_history th{
-        font-size: 10px;
-        text-align: center;
-        position: relative;
-        left: 10px;
-        letter-spacing: 0px;
+        font-size: 14px;
     }
     
     #restaurant_self_pick_up_history td{
         font-size: 10px;
-        text-align: center;
     }
     
     #restaurant_self_pick_up_history .cancel_modal_body{
@@ -289,26 +321,72 @@
 /* 大型螢幕 */
 
 @media screen and (max-width:992px) {
-
+    #restaurant_self_pick_up_history tbody .detail_btn,#restaurant_self_pick_up_history .modal-footer .detail_btn{
+        font-size: 10px;
+    }
 }
 
 
 /* 平板 */
 
 @media screen and (max-width:768px) {
-
+    #restaurant_self_pick_up_history .search_bar {
+        top: 100px;
+        left: -150px;
+        width: 150%;
+    }
+    #restaurant_self_pick_up_history{
+        display: none;
+    }
+    #restaurant_self_pick_up_history_mobile{
+        all: unset;
+        font-size: 14px;
+    }
+    #restaurant_self_pick_up_history_mobile .mobile_pick_up_history_inline_div{
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        padding: 10px 0px 0px 0px;
+        display: flex;
+        flex-direction: column;
+        margin: 20px 10px;
+    }
+    #restaurant_self_pick_up_history_mobile .mobile_text_div{
+        width: 50%;
+        float: left;
+        padding: 5px 20px;
+    }
+    #restaurant_self_pick_up_history_mobile .mobile_div_text{
+        width: 50%;
+        float: right;
+        padding: 5px 20px;
+    }
+    #restaurant_self_pick_up_history_mobile .detail_btn{
+        background-color: #ccc;
+        border-radius: 5px;
+        padding: 5px 0;
+    }
 }
 
 
 /* 手機 */
 
 @media screen and (max-width:576px) {
-
+    #restaurant_self_pick_up_history .search_bar {
+        left: -130px;
+    }
+    #restaurant_self_pick_up_history_mobile{
+        font-size: 13px;
+    }
 }
 
 
 /* 小手機 */
 
 @media screen and (max-width:480px) {
-
+    #restaurant_self_pick_up_history .search_bar {
+        left: -100px;
+    }
+    #restaurant_self_pick_up_history_mobile .detail_btn{
+        width: 96.5%;
+    }
 }
