--- a/food-crossroads/src/css/restaurant_booking_history.css
+++ b/food-crossroads/src/css/restaurant_booking_history.css
@@ -3,7 +3,7 @@
     width: 230px;
     height: 90vh;
     position: fixed;
-    top: 10%;
+    top: 9%;
 }
 
 #restaurant_booking_history_aside .default {
@@ -41,6 +41,10 @@
     font-weight: 600;
 }
 
+#restaurant_booking_history_mobile{
+    display: none;
+}
+
 #restaurant_booking_history .order_table {
     position: absolute;
     top: 140px;
@@ -54,12 +58,18 @@
     border-bottom: 1px solid #403C3C;
 }
 
+#restaurant_booking_history td{
+    text-align: center;
+    vertical-align: middle;
+}
+
 #restaurant_booking_history .search_bar {
     display: flex;
     justify-content: center;
-    width: 100%;
-    position: relative;
-    top: 10px;
+    width: 70%;
+    position: fixed;
+    top: 100px;
+    left: 300px;
 }
 
 #restaurant_booking_history .search_bar_div{
@@ -99,14 +109,10 @@
     margin-right: 10px;
 }
 
-#restaurant_booking_history.member_confirm_btn{
+#restaurant_booking_history .member_confirm_btn{
     margin-left: 150px;
     border-radius: 5px;
     margin-top: 30px;
-}
-
-#restaurant_booking_history td{
-    text-align: center;
 }
 
 #restaurant_booking_history .cancel_btn{
@@ -166,21 +172,203 @@
     top: -40px;
 
 }
-#restaurant_booking_history .ratings {
-    position: relative;
-    vertical-align: middle;
-    display: inline-block;
-    color: #ddd; /*背景星星顏色*/
-    overflow: hidden;
-    font-size: 40px; /*調整字體大小可放大縮小星星*/
-    text-shadow: 0px 1px 0 #999;
+
+/* RWD */
+
+
+/* 超大型螢幕 */
+@media screen and (max-width:1200px) {
+    #restaurant_booking_history_aside {
+        display: none;
     }
-    #restaurant_booking_history .full_star {
-    width: 100%; /*調整寬度可變更星等*/
-    position: absolute;
-    left: 0;
-    top: 0;
-    white-space: nowrap;
-    overflow: hidden;
-    color: orange; /*前景星星顏色*/
+    #aside_menu_chk:checked + #restaurant_booking_history_mobile_aside {
+        transform: translateX(0);
+    }
+    #aside_menu_chk:checked + #restaurant_booking_history_mobile_aside .fa-angle-right {
+        transform: scaleX(-1);
+    }
+    #restaurant_booking_history_mobile_aside {
+        display: unset;
+        background-color: #403c3c;
+        width: 230px;
+        height: 100vh;
+        position: absolute;
+        float: left;
+        left: 0;
+        position: fixed;
+        transform: translateX(-99%);
+        z-index: 2;
+        transition: 0.6s;
+    }
+    #restaurant_booking_history_mobile_aside label {
+        position: absolute;
+        background-color: #ccc;
+        border-radius: 0 5px 5px 0;
+        padding: 20px 10px;
+        top: 50%;
+        left: 100%;
+        transition: 0.6s;
+    }
+    
+    #restaurant_booking_history_mobile_aside .panel-default{
+        border-bottom: 1px solid white;
+        padding: 5px;
+        width: 100%;
+    }
+    
+    #restaurant_booking_history_mobile_aside .default{
+        background-color: #8B1309;
+    }
+    
+    #restaurant_booking_history_mobile_aside .panel-title {
+        padding-top: 8px;
+    }
+    
+    #restaurant_booking_history_mobile_aside .panel-heading .panel-title a {
+        font-weight: 600;
+        color: white;
+        text-decoration: none;
+        transition: 0.3s;
+        width: 100%;
+    }
+    
+    #restaurant_booking_history_mobile_aside .little_title {
+        margin-left: -5px;
+        margin-right: -6px;
+        padding: 5px 0 5px 15px;
+    }
+    
+    #restaurant_booking_history_mobile_aside .little_title:hover {
+        background-color: #8B1309;
+    }
+    
+    #restaurant_booking_history_mobile_aside .panel .little_title a  {
+        text-decoration: none;
+        color: white;
+        font-weight: 600;
+    }
+    #restaurant_booking_history .search_bar {
+        top: 100px;
+        left: 50px;
+        width: 100%;
+    }
+
+    #restaurant_booking_history .container .order_table {
+        top: 150px;
+        left: 5%;
+        width: 90%;
+    }
+
+    #restaurant_booking_history th{
+        font-size: 14px;
+    }
+    
+    #restaurant_booking_history td{
+        font-size: 10px;
+    }
+    
+    #restaurant_booking_history .cancel_modal_body{
+        margin-top: 50px;
+        margin-bottom: 50px;
+        text-align: center;
+        font-size: 28px;
+    }
+    
+    #restaurant_booking_history .modal-title{
+        font-size: 24px; 
+    }
+    #restaurant_booking_history .detail_modal_body{
+        margin-top: 50px;
+        margin-bottom: 50px;
+        margin-left: 150px;
+        font-size: 18px;
+    }
+    
+    #restaurant_booking_history .rank_modal_body{
+        position: relative;
+        margin-top: 100px;
+        margin-bottom: 100px;
+        margin-left: 150px;
+    }
+    
+    #restaurant_booking_history .rank_modal_title{
+        position: absolute;
+        font-size: 28px;
+        left: -50px;
+        top: -40px;
+    }
+}
+
+
+/* 大型螢幕 */
+
+@media screen and (max-width:992px) {
+    #restaurant_booking_history tbody .detail_btn,#restaurant_booking_history_history .modal-footer .detail_btn{
+        font-size: 10px;
+    }
+}
+
+
+/* 平板 */
+
+@media screen and (max-width:768px) {
+    #restaurant_booking_history .search_bar {
+        top: 100px;
+        left: -150px;
+        width: 150%;
+    }
+    #restaurant_booking_history{
+        display: none;
+    }
+    #restaurant_booking_history_mobile{
+        all: unset;
+        font-size: 14px;
+    }
+    #restaurant_booking_history_mobile .mobile_booking_history_inline_div{
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        padding: 10px 0px 0px 0px;
+        display: flex;
+        flex-direction: column;
+        margin: 20px 10px;
+    }
+    #restaurant_booking_history_mobile .mobile_text_div{
+        width: 50%;
+        float: left;
+        padding: 5px 20px;
+    }
+    #restaurant_booking_history_mobile .mobile_div_text{
+        width: 50%;
+        float: right;
+        padding: 5px 20px;
+    }
+    #restaurant_booking_history_mobile .detail_btn{
+        background-color: #ccc;
+        border-radius: 5px;
+        padding: 5px 0;
+    }
+}
+
+
+/* 手機 */
+
+@media screen and (max-width:576px) {
+    #restaurant_booking_history .search_bar {
+        left: -130px;
+    }
+    #restaurant_booking_history_mobile{
+        font-size: 13px;
+    }
+}
+
+
+/* 小手機 */
+
+@media screen and (max-width:480px) {
+    #restaurant_booking_history .search_bar {
+        left: -100px;
+    }
+    #restaurant_booking_history_mobile .detail_btn{
+        width: 96.5%;
+    }
 }
