--- a/food-crossroads/src/css/restaurant_booking_today.css
+++ b/food-crossroads/src/css/restaurant_booking_today.css
@@ -3,7 +3,7 @@
     width: 230px;
     height: 90vh;
     position: fixed;
-    top: 10%;
+    top: 9%;
 }
 
 #restaurant_today_booking_aside .panel-default{
@@ -50,14 +50,10 @@
 #restaurant_today_booking .search_bar {
     display: flex;
     justify-content: center;
-    width: 100%;
-    position: relative;
-    top: 10px;
-}
-
-#restaurant_today_booking .search_bar h3{
-    font-weight: 600;
-    margin-right: 500px;
+    width: 70%;
+    position: fixed;
+    top: 100px;
+    left: 300px;
 }
 
 #restaurant_today_booking .search_bar input[type=text]{
@@ -92,6 +88,10 @@
     margin-right: 10px;
 }
 
+#restaurant_today_booking_mobile{
+    display: none;
+}
+
 #restaurant_today_booking .container .order_table {
     position: absolute;
     top: 140px;
@@ -99,17 +99,16 @@
     width: 75%;
 }
 
-#restaurant_today_booking label{
-    margin-right: 20px;
-}
-
 #restaurant_today_booking th{
     text-align: center;
-    width: 100px;
+    border-bottom: 1px solid #403C3C;
+    width: 80px;
 }
 
 #restaurant_today_booking td{
+    width: 80px;
     text-align: center;
+    border-top: 1px solid #403C3C;
     vertical-align: middle;
 }
 
@@ -121,14 +120,12 @@
 
 #restaurant_today_booking tbody .detail_btn,#restaurant_today_booking tbody .cancel_btn {
     border-radius: 5px;
-    border: none;
     padding: 5px 8px;
     transition: 0.3s;
 }
 
 #restaurant_today_booking .modal-footer .detail_btn,#restaurant_today_booking .modal-footer .cancel_btn {
     border-radius: 5px;
-    border: none;
     font-size: 18px;
     padding: 10px 14px;
     transition: 0.3s;
@@ -140,12 +137,12 @@
 }
 
 #restaurant_today_booking .detail_btn:hover {
-    background-color: #524d4d;    
+    background-color: #403C3C;    
     color: #fff;
 }
 
 #restaurant_today_booking .modal-footer .detail_btn:hover{
-    background-color: #524d4d
+    background-color: #403C3C;
 }
 
 #restaurant_today_booking .cancel_btn,#restaurant_today_booking .modal-footer .cancel_btn{
@@ -222,6 +219,28 @@
     margin-bottom: 50px;
 }
 
+#detail .modal-footer .btn_close{
+    border: 2px solid #403C3C;
+    background-color: #fff;
+    transition: 0.3s;
+}
+
+#detail .modal-footer .btn_close:hover{
+    background-color: #403C3C;
+    color: #fff;
+}
+
+#search .modal-footer .btn_close{
+    border: 2px solid #403C3C;
+    background-color: #fff;
+    transition: 0.3s;
+}
+
+#search .modal-footer .btn_close:hover{
+    background-color: #403C3C;
+    color: #fff;
+}
+
 #cancel .modal-content {
     width: 100%;
     margin-top: -120px;
@@ -239,12 +258,23 @@
 
 #cancel .c_btn {
     background-color: #8B1309;
+    transition: 0.3s;
 }
 
 #cancel .c_btn:hover {
-    background-color: #f84b3c;
+    background-color: #a30f01;
 }
 
+#cancel .btn_close{
+    border: 2px solid #403C3C;
+    background-color: #fff;
+    transition: 0.3s;
+}
+
+#cancel .btn_close:hover{
+    background-color: #403C3C;
+    color: #fff;
+}
 
 /* RWD */
 
@@ -252,77 +282,119 @@
 /* 超大型螢幕 */
 @media screen and (max-width:1200px) {
     #restaurant_today_booking_aside {
-        background-color: #403C3C;
-        width: 150px;
-        height: 82vh;
-        position: fixed;
-        top: 12%;
+        display: none;
     }
-
-    #restaurant_today_booking_aside .panel-title {
-        font-size: 20px;
+    #aside_menu_chk:checked + #restaurant_today_booking_mobile_aside {
+        transform: translateX(0);
+    }
+    #aside_menu_chk:checked + #restaurant_today_booking_mobile_aside .fa-angle-right {
+        transform: scaleX(-1);
+    }
+    #restaurant_today_booking_mobile_aside {
+        display: unset;
+        background-color: #403c3c;
+        width: 230px;
+        height: 100vh;
+        position: absolute;
+        float: left;
+        left: 0;
+        position: fixed;
+        transform: translateX(-99%);
+        z-index: 2;
+        transition: 0.6s;
+    }
+    #restaurant_today_booking_mobile_aside label {
+        position: absolute;
+        background-color: #ccc;
+        border-radius: 0 5px 5px 0;
+        padding: 20px 10px;
+        top: 50%;
+        left: 100%;
+        transition: 0.6s;
+    }
+    
+    #restaurant_today_booking_mobile_aside .panel-default{
+        border-bottom: 1px solid white;
+        padding: 5px;
+        width: 100%;
+    }
+    
+    #restaurant_today_booking_mobile_aside .default{
+        background-color: #8B1309;
+    }
+    
+    #restaurant_today_booking_mobile_aside .panel-title {
         padding-top: 8px;
     }
-
-    #restaurant_today_booking_aside .panel .little_title a  {
+    
+    #restaurant_today_booking_mobile_aside .panel-heading .panel-title a {
+        font-weight: 600;
+        color: white;
+        text-decoration: none;
+        transition: 0.3s;
+        width: 100%;
+    }
+    
+    #restaurant_today_booking_mobile_aside .little_title {
+        margin-left: -5px;
+        margin-right: -6px;
+        padding: 5px 0 5px 15px;
+    }
+    
+    #restaurant_today_booking_mobile_aside .little_title:hover {
+        background-color: #8B1309;
+    }
+    
+    #restaurant_today_booking_mobile_aside .panel .little_title a  {
         text-decoration: none;
         color: white;
-        font-size: 13px;
         font-weight: 600;
     }
-
-    #restaurant_today_booking_aside .container .order_table {
-       margin-top: -15px;
+    #restaurant_today_booking .search_bar {
+        top: 100px;
+        left: 50px;
+        width: 100%;
     }
 
-    #restaurant_today_booking_aside th{
+    #restaurant_today_booking .container .order_table {
+        top: 150px;
+        left: 5%;
+        width: 90%;
+    }
+
+    #restaurant_today_booking th{
+        font-size: 14px;
+    }
+    
+    #restaurant_today_booking td{
         font-size: 10px;
-        text-align: center;
-        position: relative;
-        left: 10px;
-        letter-spacing: 0px;
     }
     
-    #restaurant_today_booking_aside td{
-        font-size: 10px;
-        text-align: center;
-    }
-    
-    #restaurant_today_booking_aside tbody .detail_btn {
-        border-radius: 8px;
-    }
-
-    #restaurant_today_booking_aside tbody .cancel_btn {
-        margin-right: 100px;
-    }
-    
-    #restaurant_today_booking_aside .cancel_modal_body{
+    #restaurant_today_booking .cancel_modal_body{
         margin-top: 50px;
         margin-bottom: 50px;
         text-align: center;
         font-size: 28px;
     }
     
-    #restaurant_today_booking_aside .modal-title{
+    #restaurant_today_booking .modal-title{
         font-size: 24px; 
     }
-
-    #restaurant_today_booking_aside .detail_modal_body{
+    #restaurant_today_booking .detail_modal_body{
         margin-top: 50px;
         margin-bottom: 50px;
         margin-left: 150px;
         font-size: 18px;
-
     }
     
-    #restaurant_today_booking_aside .rank_modal_body{
+    #restaurant_today_booking .rank_modal_body{
         position: relative;
         margin-top: 100px;
         margin-bottom: 100px;
         margin-left: 150px;
     }
     
-    #restaurant_today_booking_aside .rank_modal_title{
+    #restaurant_today_booking .rank_modal_title{
         position: absolute;
         font-size: 28px;
         left: -50px;
@@ -334,26 +406,72 @@
 /* 大型螢幕 */
 
 @media screen and (max-width:992px) {
-
+    #restaurant_today_booking tbody .detail_btn,#restaurant_today_booking_history .modal-footer .detail_btn{
+        font-size: 10px;
+    }
 }
 
 
 /* 平板 */
 
 @media screen and (max-width:768px) {
-
+    #restaurant_today_booking .search_bar {
+        top: 100px;
+        left: -150px;
+        width: 150%;
+    }
+    #restaurant_today_booking{
+        display: none;
+    }
+    #restaurant_today_booking_mobile{
+        all: unset;
+        font-size: 14px;
+    }
+    #restaurant_today_booking_mobile .mobile_today_booking_inline_div{
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        padding: 10px 0px 0px 0px;
+        display: flex;
+        flex-direction: column;
+        margin: 20px 10px;
+    }
+    #restaurant_today_booking_mobile .mobile_text_div{
+        width: 50%;
+        float: left;
+        padding: 5px 20px;
+    }
+    #restaurant_today_booking_mobile .mobile_div_text{
+        width: 50%;
+        float: right;
+        padding: 5px 20px;
+    }
+    #restaurant_today_booking_mobile .detail_btn{
+        background-color: #ccc;
+        border-radius: 5px;
+        padding: 5px 0;
+    }
 }
 
 
 /* 手機 */
 
 @media screen and (max-width:576px) {
-
+    #restaurant_today_booking .search_bar {
+        left: -130px;
+    }
+    #restaurant_today_booking_mobile{
+        font-size: 13px;
+    }
 }
 
 
 /* 小手機 */
 
 @media screen and (max-width:480px) {
-
+    #restaurant_today_booking .search_bar {
+        left: -100px;
+    }
+    #restaurant_today_booking_mobile .detail_btn{
+        width: 96.5%;
+    }
 }
