--- a/food-crossroads/src/css/restaurant_self_pick_up.css
+++ b/food-crossroads/src/css/restaurant_self_pick_up.css
@@ -3,7 +3,7 @@
     width: 230px;
     height: 90vh;
     position: fixed;
-    top: 10%;
+    top: 9%;
 }
 
 #restaurant_self_pick_up_aside .default {
@@ -41,23 +41,6 @@
     font-weight: 600;
 }
 
-#restaurant_self_pick_up .order_table {
-    position: absolute;
-    top: 140px;
-    left: 17%;
-    width: 75%;
-}
-
-#restaurant_self_pick_up th {
-    width: 80px;
-    border-bottom: 1px solid #403C3C;
-}
-
-#restaurant_self_pick_up td{
-    text-align: center;
-    border-top: 1px solid #403C3C;
-}
-
 #restaurant_self_pick_up .search_bar input[type=text]{
     border: none;  
     width: 90%;
@@ -79,9 +62,12 @@
 }
 
 #restaurant_self_pick_up .search_bar {
-    position: relative;
-    left: 23px;
     display: flex;
+    justify-content: center;
+    width: 70%;
+    position: fixed;
+    top: 100px;
+    left: 300px;
 }
 
 #restaurant_self_pick_up .search_bar_div{
@@ -90,6 +76,30 @@
     padding: 5px;
     width: 30%;
     margin-right: 10px;
+}
+
+#restaurant_self_pick_up_mobile{
+    display: none;
+}
+
+#restaurant_self_pick_up .order_table {
+    position: absolute;
+    top: 140px;
+    left: 20%;
+    width: 75%;
+}
+
+#restaurant_self_pick_up th {
+    width: 80px;
+    text-align: center;
+    border-bottom: 1px solid #403C3C;
+}
+
+#restaurant_self_pick_up td{
+    width: 80px;
+    text-align: center;
+    border-top: 1px solid #403C3C;
+    vertical-align: middle;
 }
 
 .aside_menu label,.mobile_aside_menu label{
@@ -110,18 +120,23 @@
 
 #restaurant_self_pick_up tbody .detail_btn,#restaurant_self_pick_up tbody .cancel_btn {
     border-radius: 5px;
-    border: none;
     padding: 5px 8px;
     transition: 0.3s;
 }
 
 #restaurant_self_pick_up .detail_btn{
-    border: 1px solid gray;
-    border-radius: 8px;
+    border: 2px solid #403C3C;
+    background-color: #fff;
+    border-radius: 5px;
+}
+
+#restaurant_self_pick_up .detail_btn:hover{
+    background-color: #403C3C;
+    color: #fff;
 }
 
 #restaurant_self_pick_up .comment_btn{
-    border-radius: 8px;
+    border-radius: 5px;
 }
 
 #restaurant_self_pick_up .cancel_modal_body{
@@ -131,22 +146,203 @@
     font-size: 28px;
 }
 
-.ratings {
-    position: relative;
-    vertical-align: middle;
-    display: inline-block;
-    color: #ddd; /*背景星星顏色*/
-    overflow: hidden;
-    font-size: 40px; /*調整字體大小可放大縮小星星*/
-    text-shadow: 0px 1px 0 #999;
+/* RWD */
+
+
+/* 超大型螢幕 */
+@media screen and (max-width:1200px) {
+    #restaurant_self_pick_up_aside {
+        display: none;
+    }
+    #aside_menu_chk:checked + #restaurant_self_pick_up_mobile_aside {
+        transform: translateX(0);
+    }
+    #aside_menu_chk:checked + #restaurant_self_pick_up_mobile_aside .fa-angle-right {
+        transform: scaleX(-1);
+    }
+    #restaurant_self_pick_up_mobile_aside {
+        display: unset;
+        background-color: #403c3c;
+        width: 230px;
+        height: 100vh;
+        position: absolute;
+        float: left;
+        left: 0;
+        position: fixed;
+        transform: translateX(-99%);
+        z-index: 2;
+        transition: 0.6s;
+    }
+    #restaurant_self_pick_up_mobile_aside label {
+        position: absolute;
+        background-color: #ccc;
+        border-radius: 0 5px 5px 0;
+        padding: 20px 10px;
+        top: 50%;
+        left: 100%;
+        transition: 0.6s;
     }
     
-.full_star {
-    width: 100%; /*調整寬度可變更星等*/
-    position: absolute;
-    left: 0;
-    top: 0;
-    white-space: nowrap;
-    overflow: hidden;
-    color: orange; /*前景星星顏色*/
+    #restaurant_self_pick_up_mobile_aside .panel-default{
+        border-bottom: 1px solid white;
+        padding: 5px;
+        width: 100%;
+    }
+    
+    #restaurant_self_pick_up_mobile_aside .default{
+        background-color: #8B1309;
+    }
+    
+    #restaurant_self_pick_up_mobile_aside .panel-title {
+        padding-top: 8px;
+    }
+    
+    #restaurant_self_pick_up_mobile_aside .panel-heading .panel-title a {
+        font-weight: 600;
+        color: white;
+        text-decoration: none;
+        transition: 0.3s;
+        width: 100%;
+    }
+    
+    #restaurant_self_pick_up_mobile_aside .little_title {
+        margin-left: -5px;
+        margin-right: -6px;
+        padding: 5px 0 5px 15px;
+    }
+    
+    #restaurant_self_pick_up_mobile_aside .little_title:hover {
+        background-color: #8B1309;
+    }
+    
+    #restaurant_self_pick_up_mobile_aside .panel .little_title a  {
+        text-decoration: none;
+        color: white;
+        font-weight: 600;
+    }
+    #restaurant_self_pick_up .search_bar {
+        top: 100px;
+        left: 50px;
+        width: 100%;
+    }
+
+    #restaurant_self_pick_up .container .order_table {
+        top: 150px;
+        left: 5%;
+        width: 90%;
+    }
+
+    #restaurant_self_pick_up th{
+        font-size: 14px;
+    }
+    
+    #restaurant_self_pick_up td{
+        font-size: 10px;
+    }
+    
+    #restaurant_self_pick_up .cancel_modal_body{
+        margin-top: 50px;
+        margin-bottom: 50px;
+        text-align: center;
+        font-size: 28px;
+    }
+    
+    #restaurant_self_pick_up .modal-title{
+        font-size: 24px; 
+    }
+    #restaurant_self_pick_up .detail_modal_body{
+        margin-top: 50px;
+        margin-bottom: 50px;
+        margin-left: 150px;
+        font-size: 18px;
+    }
+    
+    #restaurant_self_pick_up .rank_modal_body{
+        position: relative;
+        margin-top: 100px;
+        margin-bottom: 100px;
+        margin-left: 150px;
+    }
+    
+    #restaurant_self_pick_up .rank_modal_title{
+        position: absolute;
+        font-size: 28px;
+        left: -50px;
+        top: -40px;
+    }
 }
+
+
+/* 大型螢幕 */
+
+@media screen and (max-width:992px) {
+    #restaurant_self_pick_up tbody .detail_btn,#restaurant_self_pick_up_history .modal-footer .detail_btn{
+        font-size: 10px;
+    }
+}
+
+
+/* 平板 */
+
+@media screen and (max-width:768px) {
+    #restaurant_self_pick_up .search_bar {
+        top: 100px;
+        left: -150px;
+        width: 150%;
+    }
+    #restaurant_self_pick_up{
+        display: none;
+    }
+    #restaurant_self_pick_up_mobile{
+        all: unset;
+        font-size: 14px;
+    }
+    #restaurant_self_pick_up_mobile .mobile_pick_up_inline_div{
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        padding: 10px 0px 0px 0px;
+        display: flex;
+        flex-direction: column;
+        margin: 20px 10px;
+    }
+    #restaurant_self_pick_up_mobile .mobile_text_div{
+        width: 50%;
+        float: left;
+        padding: 5px 20px;
+    }
+    #restaurant_self_pick_up_mobile .mobile_div_text{
+        width: 50%;
+        float: right;
+        padding: 5px 20px;
+    }
+    #restaurant_self_pick_up_mobile .detail_btn{
+        background-color: #ccc;
+        border-radius: 5px;
+        padding: 5px 0;
+    }
+}
+
+
+/* 手機 */
+
+@media screen and (max-width:576px) {
+    #restaurant_self_pick_up_history .search_bar {
+        left: -130px;
+    }
+    #restaurant_self_pick_up_mobile{
+        font-size: 13px;
+    }
+}
+
+
+/* 小手機 */
+
+@media screen and (max-width:480px) {
+    #restaurant_self_pick_up_history .search_bar {
+        left: -100px;
+    }
+    #restaurant_self_pick_up_mobile .detail_btn{
+        width: 96.5%;
+    }
+}
+
