--- a/food-crossroads/src/css/restaurant_self_pick_up_history.css
+++ b/food-crossroads/src/css/restaurant_self_pick_up_history.css
@@ -122,15 +122,16 @@
 
 #restaurant_self_pick_up_history tbody .detail_btn,#restaurant_self_pick_up_history .modal-footer .detail_btn{
     border: 2px solid #403C3C;
+    background-color: #fff;
 }
 
 #restaurant_self_pick_up_history .detail_btn:hover {
-    background-color: #524d4d;
+    background-color: #403C3C;
     color: #fff;
 }
 
 #restaurant_self_pick_up_history .modal-footer .detail_btn:hover{
-    background-color: #524d4d
+    background-color: #403C3C;
 }
 
 #restaurant_self_pick_up_history .cancel_btn,#restaurant_self_pick_up_history .modal-footer .cancel_btn{
@@ -330,11 +331,32 @@
 /* 平板 */
 
 @media screen and (max-width:768px) {
-    #restaurant_self_pick_up_history .search_bar {
-        top: 100px;
-        left: -150px;
-        width: 150%;
+    #restaurant_self_pick_up_history_mobile .search_bar {
+        display: flex;
+        justify-content: center;
+        width: 100%;
     }
+    
+    #restaurant_self_pick_up_history_mobile .search_bar input[type=text]{
+        border: none;  
+        width: 250px;
+    }
+    
+    #restaurant_self_pick_up_history_mobile .search_bar input[type=text]:focus{
+        outline: none;
+    }
+    
+    #restaurant_self_pick_up_history_mobile .search_bar button {
+        height: 40px;
+        background-color: #FCC106;
+        border-radius: 5px;
+        padding: 2px 10px;
+    }
+    
+    #restaurant_self_pick_up_history_mobile .search_bar button:hover {
+        background-color: #f0b802;
+    }
+
     #restaurant_self_pick_up_history{
         display: none;
     }
